--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>Document</title>
     <script src="./phaser.min.js"></script>
-    <script src="./game.js"></script>
+    <script type="module" src="./game.js"></script>
     <style>
         body {
             display: grid;
